[gd_scene load_steps=4 format=3 uid="uid://b2kflqihn4bcw"]

[ext_resource type="Script" uid="uid://irmcm5hpqh31" path="res://controls/navigation_container.gd" id="1_unp5n"]
[ext_resource type="Texture2D" uid="uid://lltuig1nftoh" path="res://icons/go_back.png" id="2_qqyag"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qqyag"]

[node name="NavigationContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_unp5n")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_qqyag")

[node name="PageContainer" type="MarginContainer" parent="ScrollContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="BGoBack" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_icons/icon = ExtResource("2_qqyag")
flat = true
expand_icon = true

[connection signal="pressed" from="MarginContainer/BGoBack" to="." method="_on_b_go_back_pressed"]
